--- a/veterinaria/src/main/resources/application.properties
+++ b/veterinaria/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=veterinaria
+
+#Configuracion de la base de datos
+
+spring.datasource.url=jdbc:mysql://localhost:3306/veterinaria
+spring.datasource.username=root
+spring.datasource.password=israel04
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA Y hibernate
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
